<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_data_logger</name>
  <version>0.0.1</version>
  <description>This package will be responsible to log all data to rosbags</description>
  <maintainer email="jclinton830@gmail.com">Jerome Justin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>ros2bag</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
